--- a/report/report.tex
+++ b/report/report.tex
@@ -11,7 +11,7 @@
 \usepackage{amssymb}
 \usepackage{amsmath}
 \usepackage{listings}
-\usepackage{comment} 
+\usepackage{comment}
 
 \usepackage{graphicx}
 \DeclareGraphicsExtensions{.png}
@@ -58,14 +58,10 @@
 \tableofcontents
 
 \newpage
-\section{Specification}
+\section{Sorting algorithm}
+Remember to state why you chosen the given algorithm.
 
-\section{Design}
-
-\section{Implementation}
-
-\section{Conclusion} 
-
-\section{Appendix (source code)}
+\section{Results}
+Remember to discuss the results, not just presenting them.
 
 \end{document}
